--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ a{
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
 }
 
 .contenedor{
@@ -58,3 +58,45 @@ h3{
     font-size: 2.4rem;
 }
 
+/** HEADER **/
+
+.header{
+    display: flex;
+    justify-content: center;
+}
+
+.header__logo{
+    margin: 3rem 0;
+}
+
+/** NAVEGACION **/
+
+.navegacion{
+    background-color: var(--primarioObscuro);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+.navegacion__enlace{
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    font-size: 3rem;
+}
+.navegacion__enlace--activo, 
+.navegacion__enlace:hover{
+    color: var(--secundario);
+}
+
+/** FOOTER **/
+.footer{
+    background-color: var(--primarioObscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+.footer__texto {
+    font-family: var(--fuentePrincipal);
+    text-align: center;
+    font-size: 2.2rem;
+}
