Se añaden clases 'producto'

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,3 +100,21 @@ h3{
     text-align: center;
     font-size: 2.2rem;
 }
+
+/** PRODUCTOS **/
+
+.producto{
+
+}
+.producto__imagen{
+
+}
+.producto__información{
+
+}
+.producto__nombre{
+
+}
+.producto__precio{
+
+}
