--- a/css/styles.css
+++ b/css/styles.css
@@ -101,20 +101,42 @@ h3{
     font-size: 2.2rem;
 }
 
+/** GRID **/
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+@media (min-width: 768px) {
+    .grid{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
 /** PRODUCTOS **/
 
 .producto{
-
+    background-color: var(--primarioObscuro);
+    padding: 1rem;
 }
 .producto__imagen{
-
+    width: 100%;
 }
-.producto__información{
+.producto__informacion{
+
 
 }
 .producto__nombre{
-
+    font-size: 4rem;
 }
 .producto__precio{
-
+    font-size: 2.8;
+    color: var(--secundario);
+}
+.producto__nombre, .producto__precio{
+    font-family: var(--fuentePrincipal);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
 }
