--- a/css/styles.css
+++ b/css/styles.css
@@ -164,3 +164,51 @@ h3{
         grid-column: 2 / 4;
     }
 }
+
+/** NOSOTROS **/
+.nosotros{
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+@media (min-width: 768px) {
+    .nosotros{
+        display:grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.nosotros__contenido{
+
+}
+.nosotros__imagen{
+    grid-row: 1 /2;
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .nosotros__imagen{
+        grid-column:  2 / 3;
+    }
+}
+
+/** Bloques **/
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+@media (min-width: 768px) {
+    .bloques{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }
+}
+.bloque{
+    text-align: center;
+}
+.bloque__titulo{
+    margin: 0;
+}
+.bloque__imagen{
+    width: 100%;
+}
