--- a/css/styles.css
+++ b/css/styles.css
@@ -212,3 +212,52 @@ h3{
 .bloque__imagen{
     width: 100%;
 }
+ /** Pagina PRODUCTO **/
+ 
+.camisa{
+    padding: 2rem;
+}
+.camisa__imagen{
+    width: 100%;
+}
+ @media (min-width: 768px) {
+    .camisa{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+        padding: 2rem;
+    }
+ }
+
+ .formulario{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+.formulario__campo{
+    width: 100%;
+    border: 1rem solid var(--primarioObscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+.formulario__campo:hover{
+    cursor: pointer;
+ }
+.formulario__submit{
+   background-color: var(--secundario);
+   border: none;
+   font-size: 2rem;
+   font-family: var(--fuentePrincipal);
+   padding: 2rem;
+   transition: background-color 0.3s ease;
+   grid-column: 1 / 3;
+}
+
+.formulario__submit:hover{
+   cursor: pointer;
+   background-color: var(--secundarioObscuro);
+}
